Finished header and started features section

--- a/index.html
+++ b/index.html
@@ -34,18 +34,152 @@
       <!--HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER -->
 
       <header>
-        <div class="header__container">
+        <div class="container">
           <div class="header__description">
-            <h1 class="header__title">Beautiful React Templates <span class="purple">for you.</span></h1>
+            <h1 class="header__title">
+              Beautiful React Templates <span class="purple">for you.</span>
+            </h1>
             <h2>
-              Our templates are easy to setup, understand and customize. Fully modular components with a variety of pages and components.
+              Our templates are easy to setup, understand and customize. Fully
+              modular components with a variety of pages and components.
             </h2>
+            <div class="email__input">
+              <input type="email" placeholder="Your E-Mail Address" />
+              <button class="email__btn">Get Started</button>
+            </div>
+            <div class="trust">
+              <h2 class="trusted__customers">OUR TRUSTED CUSTOMERS</h2>
+              <img src="./assets/Customer Logo.png" alt="" class="trustees" />
+            </div>
           </div>
           <figure class="header__img--wrapper">
-            <img src="./assets/Design Illustration.svg" class="header__img" alt="" />
+            <img
+              src="./assets/Design Illustration.svg"
+              class="header__img"
+              alt=""
+            />
           </figure>
         </div>
       </header>
+    </section>
+
+    <!--FEATURES FEATURES FEATURES FEATURES FEATURES FEATURES FEATURES FEATURES -->
+
+    <section id="features">
+      <div class="container container__features">
+        <div class="features__row">
+          <div class="features__headings">
+            <h2 class="features__title">
+              <span class="purple">FEATURES</span>
+            </h2>
+            <h1 class="features__subtitle">
+              We have Amazing <span class="purple">Service</span>
+            </h1>
+            <h2 class="features__description">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi
+              nobis dignissimos accusantium facilis quis incidunt culpa quidem.
+            </h2>
+          </div>
+          <div class="features__links">
+            <div class="features__link">
+              <figure class="features__img--container">
+                <img
+                  src="./assets/secure icon.svg"
+                  alt=""
+                  class="features__img"
+                />
+              </figure>
+              <div class="features__text">
+                <h3 class="feature__name">Secure</h3>
+                <p>
+                  We strictly only deal with vendors that provide top notch
+                  security.
+                </p>
+              </div>
+            </div>
+            <div class="features__link">
+              <figure class="features__img--container">
+                <img
+                  src="./assets/support icon.svg"
+                  alt=""
+                  class="features__img"
+                />
+              </figure>
+              <div class="features__text">
+                <h3 class="feature__name">24/7 Support</h3>
+                <p>
+                  Lorem ipsum donor amet siti ceali ut enim ad minim veniam,
+                  quis nostrud.
+                </p>
+              </div>
+            </div>
+            <div class="features__link">
+              <figure class="features__img--container">
+                <img
+                  src="./assets/lines icon.svg"
+                  alt=""
+                  class="features__img"
+                />
+              </figure>
+              <div class="features__text">
+                <h3 class="feature__name">Customisable</h3>
+                <p>
+                  Lorem ipsum donor amet siti ceali ut enim ad minim veniam,
+                  quis nostrud.
+                </p>
+              </div>
+            </div>
+            <div class="features__link">
+              <figure class="features__img--container">
+                <img
+                  src="./assets/reliable icon.svg"
+                  alt=""
+                  class="features__img"
+                />
+              </figure>
+              <div class="features__text">
+                <h3 class="feature__name">Reliable</h3>
+                <p>
+                  Lorem ipsum donor amet siti ceali ut enim ad minim veniam,
+                  quis nostrud.
+                </p>
+              </div>
+            </div>
+            <div class="features__link">
+              <figure class="features__img--container">
+                <img
+                  src="./assets/fast icon.svg"
+                  alt=""
+                  class="features__img"
+                />
+              </figure>
+              <div class="features__text">
+                <h3 class="feature__name">Fast</h3>
+                <p>
+                  Lorem ipsum donor amet siti ceali ut enim ad minim veniam,
+                  quis nostrud.
+                </p>
+              </div>
+            </div>
+            <div class="features__link">
+              <figure class="features__img--container">
+                <img
+                  src="./assets/easy icon.svg"
+                  alt=""
+                  class="features__img"
+                />
+              </figure>
+              <div class="features__text">
+                <h3 class="feature__name">Easy</h3>
+                <p>
+                  Lorem ipsum donor amet siti ceali ut enim ad minim veniam,
+                  quis nostrud.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
   </body>
 </html>
